--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         }
     ],
     "require": {
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "dompdf/dompdf": "^3.1",
+        "endroid/qr-code": "^6.0"
     }
 }
